--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
     "copy-to-clipboard": "^3.3.3",
+    "crypto-browserify": "^3.12.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "razorpay": "^2.9.2",
